# decosnake

./: .gitignore  README.md  pyproject.toml
src/decorated_snake/: __main__.py  decorators.py
src/decosnake/: __main__.py  decorators.py  writer.py
src/decosnake/examples/: apple_pos.py  dataclass.py  list_loop.py
