[project]
name = "decosnake"
version = "0.1.0"
description = ""
authors = [{ name = "marcinplatek", email = "orcharddwellerchamp@gmail.com" }]
dependencies = ["pygame<3.0.0,>=2.5.2"]
requires-python = ">=3.11,<4.0"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = ["ipykernel<7.0.0,>=6.25.2"]
